[package]
name = "nip"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]

[[bin]]
name = "git-remote-nip"
path = "src/git_remote_nip.rs"

[[bin]]
name = "nipctl"
path = "src/nipctl.rs"

[dependencies]
byteorder = "1.2.6"
docopt = "1.0"
env_logger = "0.5"
failure = "0.1"
git2 = "0.7.5"
hyper = "0.12"
ipfs-api = "0.5.0-alpha"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
tokio-core = "0.1"
nip_core = {git = "https://github.com/drozdziak1/nip_core.git"}
clap = "2.32"
