[package]
name = "nip"
description = "A git remote helper for IPFS that puts your files Nowhere In Particular"
version = "0.3.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
repository = "https://github.com/drozdziak1/nip"
readme = "README.md"
keywords = ["git", "ipfs", "libgit2", "decentralization"]
categories = ["command-line-utilities"]
license = "BSD-3-Clause"
edition = "2018"

[badges]
travis-ci = { repository = "drozdziak1/nip" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "git-remote-nip"
path = "src/git_remote_nip.rs"

[[bin]]
name = "nipctl"
path = "src/nipctl.rs"

[dependencies]
clap = "2.32"
colored = "1.6"
docopt = "1.0"
env_logger = "0.5"
failure = "0.1"
git2 = "0.7"
ipfs-api = "0.5"
log = "0.4"
nip_core = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"

[profile.release]
debug = true
